--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -14,6 +14,10 @@
 
     span {
       flex: 1;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      width: 160px;
+      white-space: nowrap;
     }
 
     &:hover {
