--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -74,7 +74,19 @@
   &__items {
     margin-top: 30px;
 
+    h2 {
+      font-family: Montserrat, sans-serif;
+      font-weight: bold;
+      font-size: 24px;
+      color: #C9D1D3;
+      text-align: center;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+    }
+
     &-row {
+      margin-bottom: 15px;
       display: flex;
       align-items: center;
 
@@ -82,6 +94,40 @@
         width: 100%;
         margin-left: 15px;
         font-size: 16px;
+      }
+    }
+  }
+
+  &__form {
+    margin-top: 20px;
+
+    &-block{
+      button{
+        margin-right: 10px;
+        margin-top: 15px;
+      }
+    }
+
+    &-new {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      opacity: 0.4;
+
+      &:hover{
+        opacity: 0.8;
+      }
+
+      img {
+        width: 16px;
+        height: 16px;
+        margin-left: 4px;
+      }
+
+      span {
+        font-size: 16px;
+        margin-left: 19px;
+
       }
     }
   }
