--- a/src/index.scss
+++ b/src/index.scss
@@ -23,10 +23,11 @@
   box-shadow: 1px 2px 20px #f1f1f1;
   font-size: 14px;
 
-  &__tasks{
+  &__tasks {
     flex: 1;
     padding: 60px;
   }
+
   &__sidebar {
     background: #F4F6F8;
     width: 200px;
@@ -39,8 +40,8 @@
 }
 
 
-
 .field {
+  font-size: 14px;
   padding: 8px 12px;
   background: #FFFFFF;
   border: 1px solid #EFEFEF;
@@ -60,11 +61,31 @@
   padding: 10px 20px;
   color: #fff;
   cursor: pointer;
+  font-size: 14px;
 
   &:hover {
     background: darken(#4dd599, 6%);
   }
-  &:active{
+
+  &:active {
     background: darken(#4dd599, 10%);
+  }
+
+  &:disabled{
+    background: #d8d8d8;
+
+  }
+
+  &--grey {
+    background: #f4f6f8;
+    color: #444;
+
+    &:hover {
+      background: darken(#f4f6f8, 4%);
+    }
+
+    &:active {
+      background: darken(#f4f6f8, 6%);
+    }
   }
 }
