--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -1,4 +1,8 @@
 .tasks {
+  &:not(:last-of-type) {
+    margin-bottom: 40px;
+  }
+
   &__title {
     font-family: Montserrat, sans-serif;
     font-size: 32px;
@@ -101,8 +105,8 @@
   &__form {
     margin-top: 20px;
 
-    &-block{
-      button{
+    &-block {
+      button {
         margin-right: 10px;
         margin-top: 15px;
       }
@@ -114,7 +118,7 @@
       cursor: pointer;
       opacity: 0.4;
 
-      &:hover{
+      &:hover {
         opacity: 0.8;
       }
 
